--- a/theme1.html
+++ b/theme1.html
@@ -1,1 +1,39 @@
-
+<!DOCTYPE html>
+<html class="content">
+<head>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"><script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <title>Глава I</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Глава I. Числа и вычисления</h1>
+    </header>
+    <main>
+        <p>Задания на вычисления всегда включаются в работу, предлагаемую
+          на вступительном испытании. Проверяется:</p>
+        <div class="list">
+          <p>✓ Умение выполнять действия с обыкновенными и
+          десятичными дробями;</p>
+          <p>✓ Умение сравнивать числа;</p>
+          <p>✓ Владение понятием процента;</p>
+          <p>✓ Владение понятием «отношение», «пропорция».</p>
+        </div>
+      <p>Пример 1. Вычислите</p> 
+      <span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>
+      <span style="display: inline;">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>
+      <p>Решение.</p>
+      <p> Текст до формулы: <span>$$16,4: 8=2,05$$</span> Текст после формулы </p>
+      <p>2) $$1,25-2,05=-0,8$$;
+      3) $$2 \frac{1}{12} \cdot(-0,8)=\frac{25}{12} \cdot\left(-\frac{4}{5}\right)=-\frac{5}{3}$$
+      4) $$2 \frac{1}{6}-\frac{5}{3}=\frac{13-10}{6}=\frac{1}{2}$$
+      Ответ: 0,5 .
+      </p>
+      <p>Вид формулы: $$ x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a} $$.  </p>
+      <p>но так прописывать текстом каждую формулу просто отвратительно, в методичке слишком много формул, что логично. Я еле как написал формулу дискриминанта, нужно искать другой способ, либо максимально упрощать этот</p>
+    </main>
+    <footer>
+        <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
+    </footer>
+</body>
+</html>
