--- a/theme2.html
+++ b/theme2.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html class="content">
+<head>
+    <title>Тема 2</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Тема 2</h1>
+    </header>
+    <main>
+        <p>Содержание темы 2.</p>
+    </main>
+    <footer>
+        <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
+    </footer>
+</body>
+</html>
