--- a/theme1.html
+++ b/theme1.html
@@ -23,12 +23,11 @@
       <span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>
       <span style="display: inline;">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>
       <p>Решение.</p>
-      <p> Текст до формулы: <span>$$16,4: 8=2,05$$</span> Текст после формулы </p>
-      <p>2) $$1,25-2,05=-0,8$$;
-      3) $$2 \frac{1}{12} \cdot(-0,8)=\frac{25}{12} \cdot\left(-\frac{4}{5}\right)=-\frac{5}{3}$$
-      4) $$2 \frac{1}{6}-\frac{5}{3}=\frac{13-10}{6}=\frac{1}{2}$$
-      Ответ: 0,5 .
-      </p>
+      <p>1)<span class="formula">$$16,4: 8=2,05$$</span>;</p>
+      <p>2)<span class="formula">$$1,25-2,05=-0,8$$</span>;</p>;
+      3)<span class="formula">$$2 \frac{1}{12} \cdot(-0,8)=\frac{25}{12} \cdot\left(-\frac{4}{5}\right)=-\frac{5}{3}$$</span>
+      4)<span class="formula">$$2 \frac{1}{6}-\frac{5}{3}=\frac{13-10}{6}=\frac{1}{2}$$</span>
+      <p>Ответ: 0,5</p>
       <p>Вид формулы: $$ x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a} $$.  </p>
       <p>но так прописывать текстом каждую формулу просто отвратительно, в методичке слишком много формул, что логично. Я еле как написал формулу дискриминанта, нужно искать другой способ, либо максимально упрощать этот</p>
     </main>
