--- a/theme1.html
+++ b/theme1.html
@@ -24,11 +24,9 @@
       <p>Решение.</p>
       <p>1)<span class="formula">$$16,4: 8=2,05$$</span>;</p>
       <p>2)<span class="formula">$$1,25-2,05=-0,8$$</span>;</p>;
-      <p>3)<span class="formula">$$2 \frac{1}{12} \cdot(-0,8)=\frac{25}{12} \cdot\left(-\frac{4}{5}\right)=-\frac{5}{3}$$</span></p>
-      <p>4)<span class="formula">$$2 \frac{1}{6}-\frac{5}{3}=\frac{13-10}{6}=\frac{1}{2}$$</span></p>
-      <p>Ответ: 0,5</p>
-      <p>Вид формулы: $$ x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a} $$.  </p>
-      <p>но так прописывать текстом каждую формулу просто отвратительно, в методичке слишком много формул, что логично. Я еле как написал формулу дискриминанта, нужно искать другой способ, либо максимально упрощать этот</p>
+      <p>3)<span class="formula">$$2 \frac{1}{12} \cdot(-0,8)=\frac{25}{12} \cdot\left(-\frac{4}{5}\right)=-\frac{5}{3}$$</span>;</p>
+      <p>4)<span class="formula">$$2 \frac{1}{6}-\frac{5}{3}=\frac{13-10}{6}=\frac{1}{2}$$</span>;</p>
+      <p>Ответ: 0,5./p>
     </main>
     <footer>
         <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
