--- a/theme1.html
+++ b/theme1.html
@@ -19,11 +19,11 @@
           <p>✓ Владение понятием «отношение», «пропорция».</p>
         </div>
       <p>Пример 1. Вычислите</p>
-      <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span></p>
-      <span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>
+      <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
+      <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
       <p>Решение.</p>
       <p>1)<span class="formula">$$16,4: 8=2,05$$</span>;</p>
-      <p>2)<span class="formula">$$1,25-2,05=-0,8$$</span>;</p>;
+      <p>2)<span class="formula">$$1,25-2,05=-0,8$$</span>;</p>
       <p>3)<span class="formula">$$2 \frac{1}{12} \cdot(-0,8)=\frac{25}{12} \cdot\left(-\frac{4}{5}\right)=-\frac{5}{3}$$</span>;</p>
       <p>4)<span class="formula">$$2 \frac{1}{6}-\frac{5}{3}=\frac{13-10}{6}=\frac{1}{2}$$</span>;</p>
       <p>Ответ: 0,5./p>
