--- a/theme1.html
+++ b/theme1.html
@@ -26,7 +26,29 @@
       <p>2)<span class="formula">$$1,25-2,05=-0,8$$</span>;</p>
       <p>3)<span class="formula">$$2 \frac{1}{12} \cdot(-0,8)=\frac{25}{12} \cdot\left(-\frac{4}{5}\right)=-\frac{5}{3}$$</span>;</p>
       <p>4)<span class="formula">$$2 \frac{1}{6}-\frac{5}{3}=\frac{13-10}{6}=\frac{1}{2}$$</span>;</p>
-      <p>Ответ: 0,5./p>
+      <p>Ответ: 0,5.</p>
+      <p>Пример 2. Сырок стоит 7 рублей 20 копеек. Какое наибольшее
+количество сырков можно купить на 60 рублей?</p>
+      <p>Решение. 7 рублей 20 копеек = 7,2 рубля.</p>
+      <p><span class="formula"> $$60: 7,2=\frac{60}{7,2}=\frac{600}{72}=\frac{100}{12}=\frac{25}{3}=8 \frac{1}{3}$$ </span>;</p>
+      <p>Значит, на 60 рублей можно купить не больше 8 сырков по 7 рублей 20 копеек.</p>
+      <p>Ответ: 8.</p>
+      <p>Пример 3. На день рождения полагается дарить букет из нечетного
+числа цветов. Розы стоят 80 рублей за штуку. У Вани есть 300 рублей.
+Из какого наибольшего числа роз он может купить букет Маше на день
+рождения?</p>
+      <p>Решение.</p>
+      <p><span class="formula"> $$ \frac{300}{80}=\frac{15}{4}=3 \frac{3}{4}$$ </span>;</p>
+      <p>Значит, 3-наибольшее из искомых чисел для букета роз.</p>
+      <p>Ответ: 3.</p>
+      <p>Пример 4. Флакон шампуня стоит 160 рублей. Какое наибольшее
+количество флаконов можно купить на 700 рублей во время
+распродажи, когда скидка составляет 35%?</p>
+      <p>Решение.</p>
+      <p>Найдем стоимость одного флакона шампуня со скидкой 35%:</p>
+      <p><span class="formula"> $$160: 100 \cdot 35=56$$ </span>; (руб) - скидка</p>
+      <p><span class="formula"> $$160-56=104$$ </span>; (руб)</p>
+      <p><span class="formula"></span>;</p>
     </main>
     <footer>
         <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
