--- a/theme1.html
+++ b/theme1.html
@@ -18,7 +18,11 @@
           <p>✓ Владение понятием процента;</p>
           <p>✓ Владение понятием «отношение», «пропорция».</p>
         </div>
-      <p>Пример 1. Вычислите</p>
+      <h2>Пример 2.</h2>
+      <h3>Пример 3.</h3>
+      <h4>Пример 4.</h4>
+      <h5>Пример 5.</h5>
+      <p><h6>Пример 6.<span>Вычислите</span></h6></p>
       <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
       <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
       <p>Решение.</p>
