--- a/theme1.html
+++ b/theme1.html
@@ -18,8 +18,7 @@
           <p>✓ Владение понятием процента;</p>
           <p>✓ Владение понятием «отношение», «пропорция».</p>
         </div>
-      <p><h3>Пример 3.</h3><span> Вычислите</span></p>
-      <p><h4>Пример 4.</h4><span> Вычислите</span></p>
+      <h4 class="inline">Пример 1.</h4> <p class="inline">Решите.</p>
       <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
       <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
       <p>Решение.</p>
