--- a/theme1.html
+++ b/theme1.html
@@ -18,18 +18,18 @@
           <p>✓ Владение понятием процента;</p>
           <p>✓ Владение понятием «отношение», «пропорция».</p>
         </div>
-      <h4 class="inline">Пример 1.</h4> <p class="inline">Решите.</p>
+      <h4 class="inline">Пример 1.</h4><p class="inline">Решите.</p>
       <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
       <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
-      <p>Решение.</p>
+      <h4Решение.</h4>
       <p>1)<span class="formula">$$16,4: 8=2,05$$</span>;</p>
       <p>2)<span class="formula">$$1,25-2,05=-0,8$$</span>;</p>
       <p>3)<span class="formula">$$2 \frac{1}{12} \cdot(-0,8)=\frac{25}{12} \cdot\left(-\frac{4}{5}\right)=-\frac{5}{3}$$</span>;</p>
       <p>4)<span class="formula">$$2 \frac{1}{6}-\frac{5}{3}=\frac{13-10}{6}=\frac{1}{2}$$</span>;</p>
       <p>Ответ: 0,5.</p>
-      <p>Пример 2. Сырок стоит 7 рублей 20 копеек. Какое наибольшее
+      <h4 class="inline">Пример 2.</h4> <p class="inline">Сырок стоит 7 рублей 20 копеек. Какое наибольшее
 количество сырков можно купить на 60 рублей?</p>
-      <p>Решение. 7 рублей 20 копеек = 7,2 рубля.</p>
+      <h4 class ="inline">Решение.</h4> <p class="inline"> 7 рублей 20 копеек = 7,2 рубля.</p>
       <p><span class="formula"> $$60: 7,2=\frac{60}{7,2}=\frac{600}{72}=\frac{100}{12}=\frac{25}{3}=8 \frac{1}{3}$$ </span>;</p>
       <p>Значит, на 60 рублей можно купить не больше 8 сырков по 7 рублей 20 копеек.</p>
       <p>Ответ: 8.</p>
