--- a/theme1.html
+++ b/theme1.html
@@ -27,7 +27,7 @@
       <p>3)<span class="formula">$$2 \frac{1}{12} \cdot(-0,8)=\frac{25}{12} \cdot\left(-\frac{4}{5}\right)=-\frac{5}{3}$$</span>;</p>
       <p>4)<span class="formula">$$2 \frac{1}{6}-\frac{5}{3}=\frac{13-10}{6}=\frac{1}{2}$$</span>;</p>
       <p>Ответ: 0,5.</p>
-      <h4 class="inline">Пример 2.</h4> <p class="inline">Сырок стоит 7 рублей 20 копеек. Какое наибольшее
+      <h4 class="inline">Пример 2.</h4> <p class="inline new-page">Сырок стоит 7 рублей 20 копеек. Какое наибольшее
 количество сырков можно купить на 60 рублей?</p>
       <h4 class ="inline">Решение.</h4> <p class="inline"> 7 рублей 20 копеек = 7,2 рубля.</p>
       <p><span class="formula"> $$60: 7,2=\frac{60}{7,2}=\frac{600}{72}=\frac{100}{12}=\frac{25}{3}=8 \frac{1}{3}$$ </span>;</p>
