--- a/theme1.html
+++ b/theme1.html
@@ -21,33 +21,92 @@
       <h4 class="inline">Пример 1.</h4> <p class="inline">Решите.</p>
       <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
       <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
-      <p><i>Решение.</i></p>
+      <p><i>Решение:</i></p>
       <p>1)<span class="formula">$$16,4: 8=2,05$$</span>;</p>
       <p>2)<span class="formula">$$1,25-2,05=-0,8$$</span>;</p>
       <p>3)<span class="formula">$$2 \frac{1}{12} \cdot(-0,8)=\frac{25}{12} \cdot\left(-\frac{4}{5}\right)=-\frac{5}{3}$$</span>;</p>
       <p>4)<span class="formula">$$2 \frac{1}{6}-\frac{5}{3}=\frac{13-10}{6}=\frac{1}{2}$$</span>;</p>
-      <h4>Ответ: 0,5.</h4>
+      <h4 class="inline">Ответ:</h4> <p class="inline">0,5.</p>
       <h4 class="inline">Пример 2.</h4>
       <p class="inline">Сырок стоит 7 рублей 20 копеек. Какое наибольшее количество сырков можно купить на 60 рублей?</p>
-      <p><i>Решение.</i></p>
+      <p><i>Решение:</i></p>
       <p>7 рублей 20 копеек = 7,2 рубля.</p>
       <p><span class="formula"> $$60: 7,2=\frac{60}{7,2}=\frac{600}{72}=\frac{100}{12}=\frac{25}{3}=8 \frac{1}{3}$$ </span>;</p>
       <p>Значит, на 60 рублей можно купить не больше 8 сырков по 7 рублей 20 копеек.</p>
-      <h4>Ответ: 8.</h4>
+      <h4 class="inline">Ответ:</h4> <p class="inline">8.</p>
       <h4 class="inline">Пример 3.</h4>
       <p class="inline">На день рождения полагается дарить букет из нечетного числа цветов. Розы стоят 80 рублей за штуку. У Вани есть 300 рублей. 
       Из какого наибольшего числа роз он может купить букет Маше на день рождения?</p>
-      <p><i>Решение.</i></p>
+      <p><i>Решение:</i></p>
       <p><span class="formula"> $$ \frac{300}{80}=\frac{15}{4}=3 \frac{3}{4}$$ </span>;</p>
       <p>Значит, 3-наибольшее из искомых чисел для букета роз.</p>
-      <h4>Ответ: 3.</h4>
+      <h4 class="inline">Ответ:</h4> <p class="inline">3.</p>
       <h4 class="inline">Пример 4.</h4>
       <p class="inline">Флакон шампуня стоит 160 рублей. Какое наибольшее количество флаконов можно купить на 700 рублей во время распродажи, 
       когда скидка составляет 35%?</p>
-      <p><i>Решение.</i></p>
+      <p><i>Решение:</i></p>
       <p>Найдем стоимость одного флакона шампуня со скидкой 35%:</p>
       <p><span class="formula"> $$160: 100 \cdot 35=56$$ </span>; (руб) - скидка</p>
       <p><span class="formula"> $$160-56=104$$ </span>; (руб)</p>
+      "Узнаем, сколько шампуня можно купить на 700 рублей во время распродажи."
+      <p><span class="formula">$$ 700: 104=6 \frac{76}{104}=6\frac{19}{26} $$</span>;</p>
+      "Значит, наибольшее число флаконов равняется 6."
+      <h4 class="inline">Ответ:</h4> <p class="inline">6.</p>
+      <p><i>Решите самостоятельно</i></p>
+      <div>
+        <ol>
+          <li><p>Найдите значение выражения:<span class="formula">$$1 \frac{7}{8}+3 \frac{1}{8}:(13,75-12,5 \cdot 1,2)$$</span>;</p></li>
+          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
+          <li><p>Вычислите:<span class="formula"></span>;</p></li>
+          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
+          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
+          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
+          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
+          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
+          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
+          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
+          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
+          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
+          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
+          <li><p>Вычислите значение дробного выражения:<span class="formula"></span>;</p></li>
+          <li><p>Вычислите значение дробного выражения:<span class="formula"></span>;</p></li>
+          <li><p>Вычислите значение дробного выражения:<span class="formula"></span>;</p></li>
+          <li><p>Вычислите значение дробного выражения:<span class="formula"></span>;</p></li>
+          <li><p>Вычислите значение дробного выражения:<span class="formula"></span>;</p></li>
+          <li><p>Вычислите значение дробного выражения:<span class="formula"></span>;</p></li>
+          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
+          <li><p>Известно, что<span class="formula"></span>, тогда х равен:</p></li>
+          <li><p>Отрезок длиной 80см разделили на два отрезка в отношении 5:3. Найдите длину большего отрезка (в см).</p></li>
+          <li><p>Проволоку длиной 135м разрезали на две части в отношении 5:4. Найдите длину меньшей части (в см).</p></li>
+          <li><p>В классе обучается 30 человек. С контрольной работой
+справились 90% учащихся. Сколько человек не справились с
+контрольной работой?</p></li>
+          <li><p>У девочки было 2000 рублей. 65% имевшихся у неё денег она
+израсходовала на покупку. Сколько денег осталось у девочки
+(в рублях)?</p></li>
+          <li><p>Ручка стоит 17 рублей, что составляет 85% стоимости
+блокнота. Сколько стоит блокнот?</p></li>
+          <li><p>Первое число равно 2, второе – 3. Сколько процентов
+составляет первое число от суммы этих чисел?</p></li>
+          <li><p>Длина основания равнобедренного треугольника относится к
+длине боковой стороны как 3:5. Найдите длину основания,
+если периметр этого треугольника равен 143 см.</p></li>
+          <li><p>Урок длится 40 минут. 20% времени всего урока учитель
+объяснял новую тему, а остальное время решали задачи.
+Сколько минут решали задачи?</p></li>
+          <li><p>Сколько граммов сахара содержит 15%-ный раствор массой
+0,3кг?</p></li>
+          <li><p>Шариковая ручка стоит 40 рублей. Какое наибольшее
+количество таких ручек можно купить на 800 рублей после
+повышения цены на 25%? (Ответ: 16)</p></li>
+          <li><p>По тарифному плану «Просто как день» компания сотовой
+связи каждый вечер снимает со счёта абонента 16 руб. Если на
+счету осталось меньше 16 руб., то на следующее утро номер
+блокируют до пополнения счёта. Сегодня утром у Лизы на
+счету было 300 руб. Сколько дней (включая сегодняшний) она
+сможет пользоваться телефоном, не пополняя счёт? (Ответ: 18)</p></li>
+        </ol>
+      </div>
       <p><span class="formula"></span>;</p>
     </main>
     <footer>
