--- a/theme1.html
+++ b/theme1.html
@@ -26,10 +26,15 @@
       <p>2)<span class="formula">$$1,25-2,05=-0,8$$</span>;</p>
       <p>3)<span class="formula">$$2 \frac{1}{12} \cdot(-0,8)=\frac{25}{12} \cdot\left(-\frac{4}{5}\right)=-\frac{5}{3}$$</span>;</p>
       <p>4)<span class="formula">$$2 \frac{1}{6}-\frac{5}{3}=\frac{13-10}{6}=\frac{1}{2}$$</span>;</p>
-      <h4 class="inline">Ответ:</h4> <p class="inline">0,5.</p>
-      <h4 class="inline">Пример 2.</h4>
-      <p class="inline">Сырок стоит 7 рублей 20 копеек. Какое наибольшее количество сырков можно купить на 60 рублей?</p>
+      <div>
+        <h4 class="inline">Ответ:</h4> 
+        <p class="inline">0,5.</p>
+      </div>
+      <div>
+        <h4 class="inline">Пример 2.</h4>
+        <p class="inline">Сырок стоит 7 рублей 20 копеек. Какое наибольшее количество сырков можно купить на 60 рублей?</p>
       <p><i>Решение:</i></p>
+      </div>
       <p>7 рублей 20 копеек = 7,2 рубля.</p>
       <p><span class="formula"> $$60: 7,2=\frac{60}{7,2}=\frac{600}{72}=\frac{100}{12}=\frac{25}{3}=8 \frac{1}{3}$$ </span>;</p>
       <p>Значит, на 60 рублей можно купить не больше 8 сырков по 7 рублей 20 копеек.</p>
@@ -48,14 +53,14 @@
       <p>Найдем стоимость одного флакона шампуня со скидкой 35%:</p>
       <p><span class="formula"> $$160: 100 \cdot 35=56$$ </span>; (руб) - скидка</p>
       <p><span class="formula"> $$160-56=104$$ </span>; (руб)</p>
-      "Узнаем, сколько шампуня можно купить на 700 рублей во время распродажи."
+      <p>Узнаем, сколько шампуня можно купить на 700 рублей во время распродажи.</p>
       <p><span class="formula">$$ 700: 104=6 \frac{76}{104}=6\frac{19}{26} $$</span>;</p>
-      "Значит, наибольшее число флаконов равняется 6."
+      <p>Значит, наибольшее число флаконов равняется 6.</p>
       <h4 class="inline">Ответ:</h4> <p class="inline">6.</p>
       <p><i>Решите самостоятельно</i></p>
       <div>
         <ol>
-          <li><p>Найдите значение выражения:<span class="formula">$$1 \frac{7}{8}+3 \frac{1}{8}:(13,75-12,5 \cdot 1,2)$$</span>;</p></li>
+          <li>Найдите значение выражения:<span class="formula">$$1 \frac{7}{8}+3 \frac{1}{8}:(13,75-12,5 \cdot 1,2)$$</span>;</li>
           <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
           <li><p>Вычислите:<span class="formula"></span>;</p></li>
           <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
