--- a/theme1.html
+++ b/theme1.html
@@ -30,22 +30,26 @@
         <h4 class="inline">Ответ:</h4> 
         <p class="inline">0,5.</p>
       </div>
-      <div>
         <h4 class="inline">Пример 2.</h4>
         <p class="inline">Сырок стоит 7 рублей 20 копеек. Какое наибольшее количество сырков можно купить на 60 рублей?</p>
       <p><i>Решение:</i></p>
-      </div>
       <p>7 рублей 20 копеек = 7,2 рубля.</p>
       <p><span class="formula"> $$60: 7,2=\frac{60}{7,2}=\frac{600}{72}=\frac{100}{12}=\frac{25}{3}=8 \frac{1}{3}$$ </span>;</p>
       <p>Значит, на 60 рублей можно купить не больше 8 сырков по 7 рублей 20 копеек.</p>
-      <h4 class="inline">Ответ:</h4> <p class="inline">8.</p>
+      <div>
+        <h4 class="inline">Ответ:</h4> 
+        <p class="inline">8.</p>
+      </div>
       <h4 class="inline">Пример 3.</h4>
       <p class="inline">На день рождения полагается дарить букет из нечетного числа цветов. Розы стоят 80 рублей за штуку. У Вани есть 300 рублей. 
-      Из какого наибольшего числа роз он может купить букет Маше на день рождения?</p>
+        Из какого наибольшего числа роз он может купить букет Маше на день рождения?</p>
       <p><i>Решение:</i></p>
       <p><span class="formula"> $$ \frac{300}{80}=\frac{15}{4}=3 \frac{3}{4}$$ </span>;</p>
       <p>Значит, 3-наибольшее из искомых чисел для букета роз.</p>
-      <h4 class="inline">Ответ:</h4> <p class="inline">3.</p>
+      <div>
+        <h4 class="inline">Ответ:</h4> 
+        <p class="inline">3.</p>
+      </div>
       <h4 class="inline">Пример 4.</h4>
       <p class="inline">Флакон шампуня стоит 160 рублей. Какое наибольшее количество флаконов можно купить на 700 рублей во время распродажи, 
       когда скидка составляет 35%?</p>
@@ -60,56 +64,56 @@
       <p><i>Решите самостоятельно</i></p>
       <div>
         <ol>
-          <li>Найдите значение выражения:<span class="formula">$$1 \frac{7}{8}+3 \frac{1}{8}:(13,75-12,5 \cdot 1,2)$$</span>;</li>
-          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
-          <li><p>Вычислите:<span class="formula"></span>;</p></li>
-          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
-          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
-          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
-          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
-          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
-          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
-          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
-          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
-          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
-          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
-          <li><p>Вычислите значение дробного выражения:<span class="formula"></span>;</p></li>
-          <li><p>Вычислите значение дробного выражения:<span class="formula"></span>;</p></li>
-          <li><p>Вычислите значение дробного выражения:<span class="formula"></span>;</p></li>
-          <li><p>Вычислите значение дробного выражения:<span class="formula"></span>;</p></li>
-          <li><p>Вычислите значение дробного выражения:<span class="formula"></span>;</p></li>
-          <li><p>Вычислите значение дробного выражения:<span class="formula"></span>;</p></li>
-          <li><p>Найдите значение выражения:<span class="formula"></span>;</p></li>
-          <li><p>Известно, что<span class="formula"></span>, тогда х равен:</p></li>
-          <li><p>Отрезок длиной 80см разделили на два отрезка в отношении 5:3. Найдите длину большего отрезка (в см).</p></li>
-          <li><p>Проволоку длиной 135м разрезали на две части в отношении 5:4. Найдите длину меньшей части (в см).</p></li>
-          <li><p>В классе обучается 30 человек. С контрольной работой
+1          <li>Найдите значение выражения: <span class="formula">$$1 \frac{7}{8}+3 \frac{1}{8}:(13,75-12,5 \cdot 1,2)$$</span>;</li>
+          <li>Найдите значение выражения: <span class="formula">$$4 \frac{1}{8}-2 \frac{1}{4} \cdot\left(1 \frac{1}{3}: 2 \frac{1}{4}+2\right)$$</span>;</li>
+          <li>Вычислите:<span class="formula">$$\left(\frac{5}{18}-\frac{7}{12} \cdot 0,5\right): \frac{5}{18}-\frac{2}{3}$$</span>;</li>
+          <li>Найдите значение выражения: <span class="formula">$-13-14-15+(-25)+(-26)+(-27)$</span>;</li>
+5          <li>Найдите значение выражения: <span class="formula">$18,5+27+(-23,8)+(-18,5)$</span>;</li>
+          <li>Найдите значение выражения: <span class="formula">$(12,7-15,1)+3,9-(-37,73+12,5)$</span>;</li>
+          <li>Найдите значение выражения: <span class="formula">$-326,98+25,35+0,63-1,2$</span>;</li>
+          <li>Найдите значение выражения: <span class="formula">$129,1+(-18,096)-12,904-$ $(-117,1)$</span>;</li>
+          <li>Найдите значение выражения: <span class="formula">$-1 \frac{5}{28}+6 \frac{1}{8}+\left(-4 \frac{23}{28}\right)+2 \frac{3}{16}$</span>;</li>
+10          <li>Найдите значение выражения: <span class="formula">$-18 \frac{2}{11}+3 \frac{1}{2}-6+\left(-3 \frac{9}{11}\right)+7 \frac{1}{2}$</span>;</li>
+          <li>Найдите значение выражения: <span class="formula">$-6 \frac{5}{6}-\left(-12 \frac{3}{4}\right)-2 \frac{1}{2}$</span>;</li>
+          <li>Найдите значение выражения: <span class="formula">$-5 \frac{3}{8}+11-7 \frac{5}{12}$</span>;</li>
+          <li>Найдите значение выражения: <span class="formula">$-17 \frac{11}{15}+\left(-9 \frac{11}{20}\right)-3 \frac{3}{10}-1 \frac{17}{20}$</span>;</li>
+          <li>Вычислите значение дробного выражения: <span class="formula">$\frac{4 \frac{4}{15}}{1 \frac{3}{5}}$</span>;</li>
+15          <li>Вычислите значение дробного выражения: <span class="formula">$\frac{5,1}{13,6}$</span>;</li>
+          <li>Вычислите значение дробного выражения: <span class="formula">$\frac{7,5}{1 \frac{1}{2}}-\frac{2 \frac{2}{5}}{1,8}$</span>;</li>
+          <li>Вычислите значение дробного выражения: <span class="formula">$\frac{3,6}{0,48}+\frac{3 \frac{2}{3}}{2 \frac{4}{9}}$</span>;</li>
+          <li>Вычислите значение дробного выражения: <span class="formula">$\frac{5 \frac{2}{5} \cdot 1 \frac{2}{3}}{2 \frac{4}{7} \cdot 1 \frac{3}{4}}$</span>;</li>
+          <li>Вычислите значение дробного выражения: <span class="formula">$\frac{9,8 \cdot 3,8 \cdot 1,45}{9,5 \cdot 2,9 \cdot 0,02}$</span>;</li>
+20          <li>Найдите значение выражения: <span class="formula">$\left(\frac{5}{8}-\frac{3}{5}\right) \cdot 3,6+1,01$</span>;</li>
+          <li>Известно, что <span class="formula">$\frac{4,5}{x}=\frac{3}{5}$</span>, тогда х равен:</li>
+          <li>Отрезок длиной 80см разделили на два отрезка в отношении 5:3. Найдите длину большего отрезка (в см).</li>
+          <li>Проволоку длиной 135м разрезали на две части в отношении 5:4. Найдите длину меньшей части (в см).</li>
+          <li>В классе обучается 30 человек. С контрольной работой
 справились 90% учащихся. Сколько человек не справились с
-контрольной работой?</p></li>
-          <li><p>У девочки было 2000 рублей. 65% имевшихся у неё денег она
+контрольной работой?</li>
+25          <li>У девочки было 2000 рублей. 65% имевшихся у неё денег она
 израсходовала на покупку. Сколько денег осталось у девочки
-(в рублях)?</p></li>
-          <li><p>Ручка стоит 17 рублей, что составляет 85% стоимости
-блокнота. Сколько стоит блокнот?</p></li>
-          <li><p>Первое число равно 2, второе – 3. Сколько процентов
-составляет первое число от суммы этих чисел?</p></li>
-          <li><p>Длина основания равнобедренного треугольника относится к
+(в рублях)?</li>
+          <li>Ручка стоит 17 рублей, что составляет 85% стоимости
+блокнота. Сколько стоит блокнот?</li>
+          <li>Первое число равно 2, второе – 3. Сколько процентов
+составляет первое число от суммы этих чисел?</li>
+          <li>Длина основания равнобедренного треугольника относится к
 длине боковой стороны как 3:5. Найдите длину основания,
-если периметр этого треугольника равен 143 см.</p></li>
-          <li><p>Урок длится 40 минут. 20% времени всего урока учитель
+если периметр этого треугольника равен 143 см.</li>
+          <li>Урок длится 40 минут. 20% времени всего урока учитель
 объяснял новую тему, а остальное время решали задачи.
-Сколько минут решали задачи?</p></li>
-          <li><p>Сколько граммов сахара содержит 15%-ный раствор массой
-0,3кг?</p></li>
-          <li><p>Шариковая ручка стоит 40 рублей. Какое наибольшее
+Сколько минут решали задачи?</li>
+30          <li>Сколько граммов сахара содержит 15%-ный раствор массой
+0,3кг?</li>
+          <li>Шариковая ручка стоит 40 рублей. Какое наибольшее
 количество таких ручек можно купить на 800 рублей после
-повышения цены на 25%? (Ответ: 16)</p></li>
-          <li><p>По тарифному плану «Просто как день» компания сотовой
+повышения цены на 25%? (Ответ: 16)</li>
+          <li>По тарифному плану «Просто как день» компания сотовой
 связи каждый вечер снимает со счёта абонента 16 руб. Если на
 счету осталось меньше 16 руб., то на следующее утро номер
 блокируют до пополнения счёта. Сегодня утром у Лизы на
 счету было 300 руб. Сколько дней (включая сегодняшний) она
-сможет пользоваться телефоном, не пополняя счёт? (Ответ: 18)</p></li>
+сможет пользоваться телефоном, не пополняя счёт? (Ответ: 18)</li>
         </ol>
       </div>
       <p><span class="formula"></span>;</p>
