--- a/theme1.html
+++ b/theme1.html
@@ -64,26 +64,26 @@
       <p><i>Решите самостоятельно</i></p>
       <div>
         <ol>
-1          <li>Найдите значение выражения: <span class="formula">$$1 \frac{7}{8}+3 \frac{1}{8}:(13,75-12,5 \cdot 1,2)$$</span>;</li>
+          <li>Найдите значение выражения: <span class="formula">$$1 \frac{7}{8}+3 \frac{1}{8}:(13,75-12,5 \cdot 1,2)$$</span>;</li>
           <li>Найдите значение выражения: <span class="formula">$$4 \frac{1}{8}-2 \frac{1}{4} \cdot\left(1 \frac{1}{3}: 2 \frac{1}{4}+2\right)$$</span>;</li>
           <li>Вычислите:<span class="formula">$$\left(\frac{5}{18}-\frac{7}{12} \cdot 0,5\right): \frac{5}{18}-\frac{2}{3}$$</span>;</li>
-          <li>Найдите значение выражения: <span class="formula">$-13-14-15+(-25)+(-26)+(-27)$</span>;</li>
-5          <li>Найдите значение выражения: <span class="formula">$18,5+27+(-23,8)+(-18,5)$</span>;</li>
+          <li>Найдите значение выражения: <span class="formula">$$-13-14-15+(-25)+(-26)+(-27)$$</span>;</li>
+          <li>Найдите значение выражения: <span class="formula">$18,5+27+(-23,8)+(-18,5)$</span>;</li>
           <li>Найдите значение выражения: <span class="formula">$(12,7-15,1)+3,9-(-37,73+12,5)$</span>;</li>
           <li>Найдите значение выражения: <span class="formula">$-326,98+25,35+0,63-1,2$</span>;</li>
           <li>Найдите значение выражения: <span class="formula">$129,1+(-18,096)-12,904-$ $(-117,1)$</span>;</li>
           <li>Найдите значение выражения: <span class="formula">$-1 \frac{5}{28}+6 \frac{1}{8}+\left(-4 \frac{23}{28}\right)+2 \frac{3}{16}$</span>;</li>
-10          <li>Найдите значение выражения: <span class="formula">$-18 \frac{2}{11}+3 \frac{1}{2}-6+\left(-3 \frac{9}{11}\right)+7 \frac{1}{2}$</span>;</li>
+          <li>Найдите значение выражения: <span class="formula">$-18 \frac{2}{11}+3 \frac{1}{2}-6+\left(-3 \frac{9}{11}\right)+7 \frac{1}{2}$</span>;</li>
           <li>Найдите значение выражения: <span class="formula">$-6 \frac{5}{6}-\left(-12 \frac{3}{4}\right)-2 \frac{1}{2}$</span>;</li>
           <li>Найдите значение выражения: <span class="formula">$-5 \frac{3}{8}+11-7 \frac{5}{12}$</span>;</li>
           <li>Найдите значение выражения: <span class="formula">$-17 \frac{11}{15}+\left(-9 \frac{11}{20}\right)-3 \frac{3}{10}-1 \frac{17}{20}$</span>;</li>
           <li>Вычислите значение дробного выражения: <span class="formula">$\frac{4 \frac{4}{15}}{1 \frac{3}{5}}$</span>;</li>
-15          <li>Вычислите значение дробного выражения: <span class="formula">$\frac{5,1}{13,6}$</span>;</li>
+          <li>Вычислите значение дробного выражения: <span class="formula">$\frac{5,1}{13,6}$</span>;</li>
           <li>Вычислите значение дробного выражения: <span class="formula">$\frac{7,5}{1 \frac{1}{2}}-\frac{2 \frac{2}{5}}{1,8}$</span>;</li>
           <li>Вычислите значение дробного выражения: <span class="formula">$\frac{3,6}{0,48}+\frac{3 \frac{2}{3}}{2 \frac{4}{9}}$</span>;</li>
           <li>Вычислите значение дробного выражения: <span class="formula">$\frac{5 \frac{2}{5} \cdot 1 \frac{2}{3}}{2 \frac{4}{7} \cdot 1 \frac{3}{4}}$</span>;</li>
           <li>Вычислите значение дробного выражения: <span class="formula">$\frac{9,8 \cdot 3,8 \cdot 1,45}{9,5 \cdot 2,9 \cdot 0,02}$</span>;</li>
-20          <li>Найдите значение выражения: <span class="formula">$\left(\frac{5}{8}-\frac{3}{5}\right) \cdot 3,6+1,01$</span>;</li>
+          <li>Найдите значение выражения: <span class="formula">$\left(\frac{5}{8}-\frac{3}{5}\right) \cdot 3,6+1,01$</span>;</li>
           <li>Известно, что <span class="formula">$\frac{4,5}{x}=\frac{3}{5}$</span>, тогда х равен:</li>
           <li>Отрезок длиной 80см разделили на два отрезка в отношении 5:3. Найдите длину большего отрезка (в см).</li>
           <li>Проволоку длиной 135м разрезали на две части в отношении 5:4. Найдите длину меньшей части (в см).</li>
