--- a/theme1.html
+++ b/theme1.html
@@ -73,34 +73,34 @@
           <li>Найдите значение выражения: <span class="formula">$$-326,98+25,35+0,63-1,2$$</span>;<p>а) -302,2; б)-354,16; в) – 353,98; г)-313.</p></li>
           <li>Найдите значение выражения: <span class="formula">$$129,1+(-18,096)-12,904-(-117,1)$$</span>;<p>а) -2,808; б)-19,85; в) -19; г)215,2.</p></li>
           <li>Найдите значение выражения: <span class="formula">$$-1 \frac{5}{28}+6 \frac{1}{8}+\left(-4 \frac{23}{28}\right)+2 \frac{3}{16}$$</span>;
-            <p>а) <span class="formula">$$13 \frac{5}{16}$$</span>; б) <span class="formula">$$2 \frac{5}{16}$$</span>; 
-              в) <span class="formula">$$3 \frac{4}{9}$$</span>; г) <span class="formula">$$2 \frac{1}{24}$$</span>;</p></li>
+            <p>а)<span class="formula">$$13 \frac{5}{16}$$</span>; б)<span class="formula">$$2 \frac{5}{16}$$</span>; 
+              в)<span class="formula">$$3 \frac{4}{9}$$</span>; г)<span class="formula">$$2 \frac{1}{24}$$</span>;</p></li>
           <li>Найдите значение выражения: <span class="formula">$$-18 \frac{2}{11}+3 \frac{1}{2}-6+\left(-3 \frac{9}{11}\right)+7 \frac{1}{2}$$</span>;
-          <p>а) <span class="formula">$$-37 \frac{1}{2}$$</span>; б) <span class="formula">$$37 \frac{1}{2}$$</span>; 
-              в) <span class="formula">$$-17$$</span>; г) <span class="formula">$$17$$</span>;</p></li>
+          <p>а)<span class="formula">$$-37 \frac{1}{2}$$</span>; б)<span class="formula">$$37 \frac{1}{2}$$</span>; 
+              в)<span class="formula">$$-17$$</span>; г)<span class="formula">$$17$$</span>;</p></li>
           <li>Найдите значение выражения: <span class="formula">$$-6 \frac{5}{6}-\left(-12 \frac{3}{4}\right)-2 \frac{1}{2}$$</span>;
-          <p>а) <span class="formula">$$-20 \frac{3}{4}$$</span>; б) <span class="formula">$$4$$</span>; 
-              в) <span class="formula">$$-4$$</span>; г) <span class="formula">$$3 \frac{5}{12}$$</span>;</p></li>
+          <p>а)<span class="formula">$$-20 \frac{3}{4}$$</span>; б)<span class="formula">$$4$$</span>; 
+              в)<span class="formula">$$-4$$</span>; г)<span class="formula">$$3 \frac{5}{12}$$</span>;</p></li>
           <li>Найдите значение выражения: <span class="formula">$$-5 \frac{3}{8}+11-7 \frac{5}{12}$$</span>;
-          <p>а) <span class="formula">$$-1 \frac{2}{5}$$</span>; б) <span class="formula">$$-1 \frac{19}{24}$$</span>; 
-              в) <span class="formula">$$-23 \frac{2}{5}$$</span>; г) <span class="formula">$$-23 \frac{19}{24}$$</span>;</p></li>
+          <p>а)<span class="formula">$$-1 \frac{2}{5}$$</span>; б)<span class="formula">$$-1 \frac{19}{24}$$</span>; 
+              в)<span class="formula">$$-23 \frac{2}{5}$$</span>; г)<span class="formula">$$-23 \frac{19}{24}$$</span>;</p></li>
           <li>Найдите значение выражения: <span class="formula">$$-17 \frac{11}{15}+\left(-9 \frac{11}{20}\right)-3 \frac{3}{10}-1 \frac{17}{20}$$</span>;
-          <p>а) <span class="formula">$$-30 \frac{42}{65}$$</span>; б) <span class="formula">$$30 \frac{32}{65}$$</span>; 
-              в) <span class="formula">$$-32 \frac{13}{30}$$</span>; г) <span class="formula">$$32 \frac{13}{30}$$</span>;</p></li>
+          <p>а)<span class="formula">$$-30 \frac{42}{65}$$</span>; б)<span class="formula">$$30 \frac{32}{65}$$</span>; 
+              в)<span class="formula">$$-32 \frac{13}{30}$$</span>; г)<span class="formula">$$32 \frac{13}{30}$$</span>;</p></li>
           <li>Вычислите значение дробного выражения: <span class="formula">$$\frac{4 \frac{4}{15}}{1 \frac{3}{5}}$$</span>;
-          <p>а) <span class="formula">$$4 \frac{4}{25}$$</span>; б) <span class="formula">$$10$$</span>; 
-              в) <span class="formula">$$2 \frac{2}{3}$$</span>; г) <span class="formula">$$25,6$$</span>;</p></li>
+          <p>а)<span class="formula">$$4 \frac{4}{25}$$</span>; б)<span class="formula">$$10$$</span>; 
+              в)<span class="formula">$$2 \frac{2}{3}$$</span>; г)<span class="formula">$$25,6$$</span>;</p></li>
           <li>Вычислите значение дробного выражения: <span class="formula">$$\frac{5,1}{13,6}$$</span>;
             <p>а)3,75; б) 0,375; в) 37,5; г) 2,7</p></li>
           <li>Вычислите значение дробного выражения: <span class="formula">$$\frac{7,5}{1 \frac{1}{2}}-\frac{2 \frac{2}{5}}{1,8}$$</span>;
-          <p>а) <span class="formula">$$3 \frac{2}{3}$$</span>; б) <span class="formula">$$3,7$$</span>; 
-              в) <span class="formula">$$5,05$$</span>; г) <span class="formula">$$5$$</span>;</p></li>
+          <p>а)<span class="formula">$$3 \frac{2}{3}$$</span>; б)<span class="formula">$$3,7$$</span>; 
+              в)<span class="formula">$$5,05$$</span>; г)<span class="formula">$$5$$</span>;</p></li>
           <li>Вычислите значение дробного выражения: <span class="formula">$$\frac{3,6}{0,48}+\frac{3 \frac{2}{3}}{2 \frac{4}{9}}$$</span>;
-          <p>а) <span class="formula">$$2 \frac{1}{4}$$</span>; б) <span class="formula">$$1 \frac{61}{108}$$</span>; 
-              в) <span class="formula">$$9$$</span>; г) <span class="formula">$$13,6$$</span>;</p></li>
+          <p>а)<span class="formula">$$2 \frac{1}{4}$$</span>; б)<span class="formula">$$1 \frac{61}{108}$$</span>; 
+              в)<span class="formula">$$9$$</span>; г)<span class="formula">$$13,6$$</span>;</p></li>
           <li>Вычислите значение дробного выражения: <span class="formula">$$\frac{5 \frac{2}{5} \cdot 1 \frac{2}{3}}{2 \frac{4}{7} \cdot 1 \frac{3}{4}}$$</span>;
-          <p>а) <span class="formula">$$2$$</span>; б) <span class="formula">$$6 \frac{1}{8}$$</span>; 
-              в) <span class="formula">$$81$$</span>; г) <span class="formula">$$1 \frac{29}{90}$$</span>;</p></li>
+          <p>а)<span class="formula">$$2$$</span>; б)<span class="formula">$$6 \frac{1}{8}$$</span>; 
+              в)<span class="formula">$$81$$</span>; г)<span class="formula">$$1 \frac{29}{90}$$</span>;</p></li>
           <li>Вычислите значение дробного выражения: <span class="formula">$$\frac{9,8 \cdot 3,8 \cdot 1,45}{9,5 \cdot 2,9 \cdot 0,02}$$</span>;
             <p>а)13,92 б) 139,2; в) 9,8; г) 98.</p></li>
           <li>Найдите значение выражения: <span class="formula">$$\left(\frac{5}{8}-\frac{3}{5}\right) \cdot 3,6+1,01$$</span>;
@@ -109,35 +109,33 @@
           <P>а) 7,5; б) 2,7; в) 27 г)75.</P></li>
           <li>Отрезок длиной 80см разделили на два отрезка в отношении 5:3. Найдите длину большего отрезка (в см).</li>
           <li>Проволоку длиной 135м разрезали на две части в отношении 5:4. Найдите длину меньшей части (в см).</li>
-          <li>В классе обучается 30 человек. С контрольной работой
-справились 90% учащихся. Сколько человек не справились с
-контрольной работой?</li>
-25          <li>У девочки было 2000 рублей. 65% имевшихся у неё денег она
-израсходовала на покупку. Сколько денег осталось у девочки
-(в рублях)?</li>
-          <li>Ручка стоит 17 рублей, что составляет 85% стоимости
-блокнота. Сколько стоит блокнот?</li>
-          <li>Первое число равно 2, второе – 3. Сколько процентов
-составляет первое число от суммы этих чисел?</li>
-          <li>Длина основания равнобедренного треугольника относится к
-длине боковой стороны как 3:5. Найдите длину основания,
-если периметр этого треугольника равен 143 см.</li>
-          <li>Урок длится 40 минут. 20% времени всего урока учитель
-объяснял новую тему, а остальное время решали задачи.
-Сколько минут решали задачи?</li>
-30          <li>Сколько граммов сахара содержит 15%-ный раствор массой
-0,3кг?</li>
-          <li>Шариковая ручка стоит 40 рублей. Какое наибольшее
-количество таких ручек можно купить на 800 рублей после
-повышения цены на 25%? (Ответ: 16)</li>
-          <li>По тарифному плану «Просто как день» компания сотовой
-связи каждый вечер снимает со счёта абонента 16 руб. Если на
-счету осталось меньше 16 руб., то на следующее утро номер
-блокируют до пополнения счёта. Сегодня утром у Лизы на
-счету было 300 руб. Сколько дней (включая сегодняшний) она
-сможет пользоваться телефоном, не пополняя счёт? (Ответ: 18)</li>
+          <li>В классе обучается 30 человек. С контрольной работой справились 90% учащихся. Сколько человек не справились с контрольной работой?</li>
+          <li>У девочки было 2000 рублей. 65% имевшихся у неё денег она израсходовала на покупку. Сколько денег осталось у девочки (в рублях)?</li>
+          <li>Ручка стоит 17 рублей, что составляет 85% стоимости блокнота. Сколько стоит блокнот?</li>
+          <li>Первое число равно 2, второе – 3. Сколько процентов составляет первое число от суммы этих чисел?</li>
+          <li>Длина основания равнобедренного треугольника относится к длине боковой стороны как 3:5. Найдите длину основания, если периметр этого треугольника равен 143 см.</li>
+          <li>Урок длится 40 минут. 20% времени всего урока учитель объяснял новую тему, а остальное время решали задачи. Сколько минут решали задачи?</li>
+          <li>Сколько граммов сахара содержит 15%-ный раствор массой 0,3кг?</li>
+          <li>Шариковая ручка стоит 40 рублей. Какое наибольшее количество таких ручек можно купить на 800 рублей после повышения цены на 25%? (Ответ: 16)</li>
+          <li>По тарифному плану «Просто как день» компания сотовой связи каждый вечер снимает со счёта абонента 16 руб. Если на счету осталось меньше 16 руб., то на следующее утро номер 
+            блокируют до пополнения счёта. Сегодня утром у Лизы на счету было 300 руб. Сколько дней (включая сегодняшний) она сможет пользоваться телефоном, не пополняя счёт? (Ответ: 18)</li>
         </ol>
       </div>
+      <h4>Ответы к главе I «Числа и вычисления»</h4>
+      <table>
+        <tr>
+          <th>Заголовок 1</th>
+          <th>Заголовок 2</th>
+        </tr>
+        <tr>
+          <td>Ячейка 1.1</td>
+          <td>Ячейка 1.2</td>
+        </tr>
+        <tr>
+          <td>Ячейка 2.1</td>
+          <td>Ячейка 2.2</td>
+        </tr>
+      </table>
       <p><span class="formula"></span>;</p>
     </main>
     <footer>
