--- a/theme1.html
+++ b/theme1.html
@@ -122,7 +122,7 @@
         </ol>
       </div>
       <h4>Ответы к главе I «Числа и вычисления»</h4>
-      <table>
+      <table class="my-table">
         <tr>
           <th>Заголовок 1</th>
           <th>Заголовок 2</th>
