--- a/theme1.html
+++ b/theme1.html
@@ -124,19 +124,33 @@
       <h4>Ответы к главе I «Числа и вычисления»</h4>
       <table class="my-table">
         <tr>
-          <th>Заголовок 1</th>
-          <th>Заголовок 2</th>
+          <th>№</th>
+          <th>1</th>
+          <th>2</th>
+          <th>3</th>
+          <th>4</th>
+          <th>5</th>
+          <th>6</th>
+          <th>7</th>
+          <th>8</th>
+          <th>9</th>
+          <th>10</th>
         </tr>
         <tr>
-          <td>Ячейка 1.1</td>
-          <td>Ячейка 1.2</td>
-        </tr>
-        <tr>
-          <td>Ячейка 2.1</td>
-          <td>Ячейка 2.2</td>
+          <td>Ответ</td>
+          <td><span class="formula">$$-\frac{5}{8}$$</span></td>
+          <td><span class="formula">$$-1 \frac{17}{24}$$</span></td>
+          <td><span class="formula">$$-\frac{43}{60}$$</span></td>
+          <td>в</td>
+          <td>б</td>
+          <td>б</td>
+          <td>а</td>
+          <td>г</td>
+          <td>б</td>
+          <td>в</td>
         </tr>
       </table>
-      <p><span class="formula"></span>;</p>
+      <p><span class="formula">$$$$</span>;</p>
     </main>
     <footer>
         <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
