--- a/theme1.html
+++ b/theme1.html
@@ -19,8 +19,8 @@
           <p>✓ Владение понятием «отношение», «пропорция».</p>
         </div>
       <h4 class="inline">Пример 1.</h4> <p class="inline">Решите.</p>
-      <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
-      <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
+      <p><span>$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
+      <p><span class="MathJax">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
       <p><i>Решение:</i></p>
       <p>1)<span class="formula">$$16,4: 8=2,05$$</span>;</p>
       <p>2)<span class="formula">$$1,25-2,05=-0,8$$</span>;</p>
