--- a/theme1.html
+++ b/theme1.html
@@ -19,8 +19,8 @@
           <p>✓ Владение понятием «отношение», «пропорция».</p>
         </div>
       <h4 class="inline">Пример 1.</h4> <p class="inline">Решите.</p>
-      <p><span>$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
-      <p><span class="MathJax">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
+      <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
+      <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
       <p><i>Решение:</i></p>
       <p>1)<span class="formula">$$16,4: 8=2,05$$</span>;</p>
       <p>2)<span class="formula">$$1,25-2,05=-0,8$$</span>;</p>
@@ -135,6 +135,26 @@
           <th>8</th>
           <th>9</th>
           <th>10</th>
+          <th>11</th>
+          <th>12</th>
+          <th>13</th>
+          <th>14</th>
+          <th>15</th>
+          <th>16</th>
+          <th>17</th>
+          <th>18</th>
+          <th>19</th>
+          <th>20</th>
+          <th>21</th>
+          <th>22</th>
+          <th>23</th>
+          <th>24</th>
+          <th>25</th>
+          <th>26</th>
+          <th>27</th>
+          <th>28</th>
+          <th>29</th>
+          <th>30</th>
         </tr>
         <tr>
           <td>Ответ</td>
@@ -148,6 +168,26 @@
           <td>г</td>
           <td>б</td>
           <td>в</td>
+          <th>г</th>
+          <th>б</th>
+          <th>в</th>
+          <th>в</th>
+          <th>б</th>
+          <th>а</th>
+          <th>в</th>
+          <th>а</th>
+          <th>г</th>
+          <th>в</th>
+          <th>а</th>
+          <th>50</th>
+          <th>60</th>
+          <th>3</th>
+          <th>700</th>
+          <th>20</th>
+          <th>40</th>
+          <th>33</th>
+          <th>32</th>
+          <th>45</th>
         </tr>
       </table>
       <p><span class="formula">$$$$</span>;</p>
