--- a/theme1.html
+++ b/theme1.html
@@ -18,8 +18,7 @@
           <p>✓ Владение понятием процента;</p>
           <p>✓ Владение понятием «отношение», «пропорция».</p>
         </div>
-      <h4 class="inline">Пример 1.</h4> <p class="inline">Решите.</p>
-      <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
+      <h4 class="inline">Пример 1.</h4> <p class="inline">Вычислите.</p>
       <p><span class="formula">$$2 \frac{1}{6}+2 \frac{1}{12} \cdot(1,25-1,64: 0,8)$$</span>;</p>
       <p><i>Решение:</i></p>
       <p>1)<span class="formula">$$16,4: 8=2,05$$</span>;</p>
@@ -190,7 +189,42 @@
           <th>45</th>
         </tr>
       </table>
-      <p><span class="formula">$$$$</span>;</p>
+      <table class="my-table">
+        <tr>
+          <th>16</th>
+          <th>17</th>
+          <th>18</th>
+          <th>19</th>
+          <th>20</th>
+          <th>21</th>
+          <th>22</th>
+          <th>23</th>
+          <th>24</th>
+          <th>25</th>
+          <th>26</th>
+          <th>27</th>
+          <th>28</th>
+          <th>29</th>
+          <th>30</th>
+        </tr>
+        <tr>
+          <th>а</th>
+          <th>в</th>
+          <th>а</th>
+          <th>г</th>
+          <th>в</th>
+          <th>а</th>
+          <th>50</th>
+          <th>60</th>
+          <th>3</th>
+          <th>700</th>
+          <th>20</th>
+          <th>40</th>
+          <th>33</th>
+          <th>32</th>
+          <th>45</th>
+        </tr>
+      </table>
     </main>
     <footer>
         <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
