--- a/theme2.html
+++ b/theme2.html
@@ -10,6 +10,8 @@
     </header>
     <main>
         <p>Содержание темы 2.</p>
+        
+        <p><span class="formula">$$$$</span>;</p>
     </main>
     <footer>
         <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
